# BINS_file_analysis

./: CMakeLists.txt  File.cpp  File.h  Interaction.cpp  Interaction.h  Math.cpp  Math.h  README.md  main.cpp  menu.cpp  menu.h
files_to_test/: 11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt
